Changes for Perl extension Module-Install

	- installdirs and install_as_* are now documented in
	  Module/Install.pod (PJF, RT #25111)

0.77 Fri  8 Aug 2008
	- Don't break directories starting with inc(oming) (ADAMK, RT #30637)
	- Adding more phrases to recognise GPL variants (ADAMK, RT #35195)
	- Skip 03_autoinstall.t except at release, as it can hang in some
	  situations (ADAMK, #29448)
	- Add a file check to the all_from param (ADAMK, #24586)
	- Fixed bug in can_run when PATH starts with a sep (ADAMK, #29866)
	- Don't overwrite dist args if there is a preop (ADAMK, #36831)
	- Bug fix in the command dispatcher (ADAMK, #27327)
        - perl_version now understands three-part Perl versions like
          5.8.1 (PJF, RT #38317)
	- Numify version.pm objects when generating YAML (ADAMK)

0.76 Thu 17 Jul 2008
	- ExtUtils::MakeMaker no longer complains when its version
	  contains an underscore. (PJF, RT #35800)
	- Documentation patches to Module::Install::Admin and
	  Module::Install::Base. (Adriano Ferreira, RT #27696)
	- Corrected broken internal link in Module/Install.pod. (PJF)
	- The 'examples' directory will no longer be included
	  twice in META.yml/no_index/directory. (PJF)
	- Move to the new 1.4 version of the META.yml specification (ADAMK)
	- Automatically provide resources:license for
	  license('perl') (ADAMK)
	- Implemented the bugtracker_from command (ADAMK)
	- Added bugtracker_from to the all_from command
	  (Although we don't warn if not provided) (ADAMK)
	- Shifting minimum perl version for Module::Install to 5.005
	  (Anything older should use ExtUtils::MakeMaker) (ADAMK)
	- perl_version errors if it gets a value less that 5.005 (ADAMK)
	- Created the new install_share implementation (ADAMK)
	- Added the ppport function for adding ppport.h (ADAMK)
	- Bumped File::Remove from test_requires to requires (ADAMK)
	- Added dependency on Devel::PPPort for ppport (ADAMK)

0.75 Mon  2 Jun 2008 - Adam Kennedy